--- a/papers.html
+++ b/papers.html
@@ -18,7 +18,7 @@
         referrerpolicy="no-referrer" 
         />
     <link rel="stylesheet" href="css/style.css">
-    <link rel="shortcut icon" href="Images/Profile_Photo.png">
+    <link rel="shortcut icon" href="Images/BooleanDigraph.png">
 </head>
 <body>
     
