--- a/coding.html
+++ b/coding.html
@@ -61,7 +61,7 @@
             <ul>
                 <li class="hero-text">
                     Persistent Cup-Length. I recently completed an implementation of the Persistent Cup-Length algorithm from the paper
-                    <a href="https://cs.emis.de/LIPIcs/volltexte/2022/16039/pdf/LIPIcs-SoCG-2022-31_.pdf">Persistent Cup-Length</a> by M. Contessoto, F. Memoli, A. Stefanou and L. Zhou. 
+                    <a href="https://cs.emis.de/LIPIcs/volltexte/2022/16039/pdf/LIPIcs-SoCG-2022-31_.pdf">Persistent Cup-Length</a> by M. Contessoto, F. M&eacutemoli, A. Stefanou and L. Zhou. 
                     This code is not currently optimised but the current version can be found in the Github for the Network Data Analysis Group <a href="https://github.com/ndag/persistent-cup-length">https://github.com/ndag/persistent-cup-length</a>.
                 </li>
 
